<resources>
    <string name="app_name">CampusManagement</string>
    <string name="user_logo">User Logo</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="signup_prompt">Don\'t have an account? Sign Up</string>
    <string name="signup_title">Sign Up</string>
    <string name="full_name_hint">Full Name</string>
    <string name="email_hint">Email</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="signup_button">Sign Up</string>
    <string name="login_prompt">Already have an account? Log In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_image_desc">Profile Image</string>
    <string name="events">Events</string>
    <string name="schedule">Schedule</string>
    <string name="news">News</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="home">home</string>
    <string name="profile">Profile</string>
    <string name="communication">Communication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="a_brief_description_of_this_feature">A brief description of this feature.</string>
    <string name="feature_title">Feature Title</string>
    <string name="feature_icon">Feature Icon</string>
    <string name="class_time">Class Time</string>
    <string name="unit_name">Unit Name</string>
    <string name="lecturer_name">Lecturer Name</string>
    <string name="venue">Venue</string>
    <string name="no_classes_for_today_enjoy_your_break">No classes for today. Enjoy your break!</string>
    <string name="my_schedule">My Schedule</string>
    <string name="upcoming_events">upcoming_events</string>
    <string name="venue_auditorium">Venue: Auditorium</string>
    <string name="date_10th_oct_2025">Date: 10th Oct, 2025</string>
    <string name="event_title">Event_Title</string>
    <string name="no_events_available">no_events_available</string>
    <string name="no_events_today">no_events_today</string>
    <string name="no_upcoming_events">no_upcoming_events</string>
    <string name="event_time">event_time</string>
    <string name="event_description">event_description</string>
    <string name="event_date">event_date</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="event_name">Event Name</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="feedback_message">Feedback Message</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="save_profile">Save Profile</string>
    <string name="upload_profile_picture">upload profile picture</string>
    <string name="profile_picture">profile picture</string>

</resources>