<!-- res/menu/nav_menu.xml -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/baseline_schedule"
            android:title="@string/schedule" />
    </group>

    <item android:title="@string/communication">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_events"
                    android:icon="@drawable/baseline_event"
                    android:title="@string/events" />

                <item
                    android:id="@+id/nav_news"
                    android:icon="@drawable/baseline_newspaper_24"
                    android:title="@string/news" />

                <item
                    android:id="@+id/nav_feedback"
                    android:icon="@drawable/baseline_feedback_24"
                    android:title="@string/feedback" />
            </group>
        </menu>
    </item>

    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/baseline_account_circle_24"
                    android:title="@string/account" />

                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/baseline_settings"
                    android:title="@string/settings" />
            </group>
        </menu>
    </item>

</menu>
