<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ProfileFragment">

    <!-- Title Section for Profile Fragment -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/titleProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Scrollable content for the profile fields and picture -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="40sp">

            <!-- Profile Picture Section -->
            <ImageView
                android:id="@+id/profileImageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/user_logo"
                android:scaleType="centerCrop"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/profile_picture"/>

            <!-- Button to trigger image upload -->
            <Button
                android:id="@+id/uploadProfileButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_profile_picture"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@android:color/white"/>

            <!-- Name Input Field -->
            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:background="@drawable/edit_text_border"/>

            <!-- Email Input Field -->
            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_border"/>

            <!-- Save Button -->
            <Button
                android:id="@+id/saveProfileButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/save_profile"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
