<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".FeedbackFragment">

    <!-- Title Section for the Feedback Fragment -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/titleFeedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- ScrollView to ensure the form is below the title and viewable on all screen sizes -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="70dp"
            android:padding="16dp">

            <!-- Name Input Field -->
            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="20dp"
                android:textSize="20sp"
                android:background="@drawable/edit_text_border"/>

            <!-- Email Input Field -->
            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:textSize="20sp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_border"/>

            <!-- Feedback Message Input Field -->

            <!-- Submit Button -->
            <EditText
                android:id="@+id/editTextFeedback"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_border"
                android:hint="@string/feedback_message"
                android:padding="20dp"
                android:textSize="20sp"
                android:inputType="textMultiLine"
                android:minHeight="150dp" />

            <Button
                android:id="@+id/submitFeedbackButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/submit_feedback"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
